@@ -3,15 +3,16 @@
 
 <form action="http://localhost/" method="post" enctype="multipart/form-data" name="1st_form">
     <input type="text" name="1a"  />
-    <input type="text" name="1b"  />
-    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+    <input type="IMAGE" name="submit1" value="Submit" label="Sumbit" />
+    <input type="submit" name="submit2" value="Submit" label="Sumbit" />
 </form>
 
 <form action="http://localhost/" method="post" name="2nd_form">
     <input type="text" name="YourMom" />
     <input type="text" name="opt[2]"  /> Like in PHP!
     <input type="text" name="1b"  />
-    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+    <input type="SubMit" name="submit" value="Submit" label="Sumbit" />
 </form>
 
 </body>
+</html>
