@@ -3,7 +3,7 @@
 use warnings;
 use strict;
 
-use Test::More tests => 4;
+use Test::More tests => 7;
 use URI::file;
 
 BEGIN {
@@ -19,6 +19,19 @@ my $uri = URI::file->new_abs( 't/find_inputs.html' )->as_string;
 $mech->get( $uri );
 ok( $mech->success, "Fetched $uri" ) or die q{Can't get test page};
 
-my @inputs = $mech->find_all_inputs();
+FIRST_FORM: {
+    my @inputs = $mech->find_all_inputs();
+    is( scalar @inputs, 3, 'Exactly three inputs' );
 
-is( scalar @inputs, 3, 'Exactly three inputs' );
+    my @submits = $mech->find_all_submits();
+    is( scalar @submits, 2, 'Exactly two submits' );
+}
+
+SECOND_FORM: {
+    $mech->form_number(2);
+    my @inputs = $mech->find_all_inputs();
+    is( scalar @inputs, 4, 'Exactly four inputs' );
+
+    my @submits = $mech->find_all_submits();
+    is( scalar @submits, 1, 'Exactly one submit' );
+}
