@@ -7,6 +7,10 @@ NEXT
 *   RT #26593: Improved handling of charsets.  Thanks Kevin Falcone.
 *   RT #24354: find_link now handles http-equivs with quoted URLs.
 
+[ENHANCEMENTS]
+*   Added find_all_inputs() and find_all_submits() methods.  Thanks,
+    Mike O'Regan.
+
 
 1.22        Fri Mar  2 00:05:57 CST 2007
 ========================================
